--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,48 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.loginPage
+{
+    padding: 10rem;
+    text-align: center;
+}
+
+.loginPage p
+{
+    padding: 2rem;
+    font-size: larger;
+    font-weight: bold;
+}
+
+.login-with-google-btn
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 29rem;
+    background-color: #fff;
+    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
+    padding: 0;
+    width: 291px;
+    height: 46px;
+    border-radius: 2px;
+    line-height: 46px;
+    text-align: center;
+    color: #fff;
+    font-size: larger;
+    background-color: blue;
+}
+
+.login-with-google-btn:hover
+{
+    cursor: pointer;
+}
+
+.logoGoogle
+{
+    position: absolute;
+    margin-left: 29rem;
+    width: 2.5%;
+    top: 20.85rem;
+}
