--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -2,25 +2,20 @@
 {
     position: relative;
     display: flex;
-    /* relative flex justify-center items-center */
     justify-content: center;
     align-items: center;
-    /* width: 10rem; */
 }
 
 .imag
 {
     position: relative;
-    /* width: 500px; */
     width: 150rem;
     height: 550px;
     top: 2rem;
-    /* left: 5rem; */
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
-    /* border: 2px solid #000; */
     overflow: hidden;
 }
 
@@ -28,44 +23,39 @@
 .imag img
 {
     position: relative;
-    /* width: 10rem; */
     height: 32rem;
 }
 
-/* .slideImage
-{
-    width: 10rem;
-} */
-
-/* .buttonPrev
-{
-    position: absolute;
-    top: 5rem;
-} */
-
 .buttonPrev
 {
-    border: 2px solid;
+    border: 2px solid cyan;
+    /* color: blue; */
     padding: 0.3rem;
-    font-size: larger;
+    /* font-size: larger; */
     font-weight: 500;
     cursor: pointer;
     border-radius: 2rem;
     position: absolute;
     left: 1rem;
-    width: 4rem;
-    background-color: darkgrey;
+    /* width: 4rem; */
+    background-color: cyan;
 }
 
 .buttonNext
 {
     border-radius: 2rem;
     position: absolute;
-    border: 2px solid;
+    border: 2px solid cyan;
     padding: 0.3rem;
     font-size: larger;
     font-weight: 500;
-    width: 4rem;
-    background-color: darkgrey;
+    /* width: 4rem; */
+    background-color: cyan;
     right: 2rem;
+}
+
+.buttonPrev:hover, .buttonNext:hover
+{
+    background-color: rgb(144, 255, 255);
+    color: rgb(144, 255, 255);
 }
