--- a/src/pages/shop/Shop.css
+++ b/src/pages/shop/Shop.css
@@ -1,12 +1,10 @@
 .shop
 {
-  /* position: absolute; */
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* background: #000; */
-  /* display: grid;
-  grid-template-columns: 1fr 1fr; */
   overflow: hidden;
+  display: flex;
+  height: 5rem;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .shopTitle {
@@ -66,12 +64,7 @@
   .buttons
   {
     position: relative;
-    /* top: 13rem; */
     left: 2rem;
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* justify-content: start; */
-    /* align-items: center; */
   }
 
   .filter
@@ -80,13 +73,11 @@
     font-weight: 500;
     position: relative;
     top: 1rem;
-    /* padding: 1rem; */
   }
 
   .buttons button
   {
     border: 2px solid;
-    /* margin-top: rem; */
     padding: 0.5rem;
     margin: 0.5rem;
     border-radius: 3rem;
@@ -95,4 +86,9 @@
     top: 1rem;
     width: 7rem;
     cursor: pointer;
+  }
+
+  .sort-container
+  {
+    margin-right: 1rem;
   }
